Add nodejs command for linux